Now using static binary

--- a/Alpine/InfluxDB/roles/alpine_influxdb/tasks/main.yml
+++ b/Alpine/InfluxDB/roles/alpine_influxdb/tasks/main.yml
@@ -10,38 +10,44 @@
       - ca-certificates
       - tar
 
-- name: Get the key for glibc 
-  get_url:
-    url: https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub
-    dest: /etc/apk/keys/sgerrand.rsa.pub
-    mode: 0440
+- name: Create /opt
+  file:
+     dest: /opt
+     state: directory
+     mode: 0755  
 
-- name: Get glibc 
-  get_url:
-    url: https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.25-r0/glibc-2.25-r0.apk
-    dest: /tmp/glibc-2.25-r0.apk
-    mode: 0440
-
-- name: Install packages glibc
-  apk:
-    name: /tmp/glibc-2.25-r0.apk
-    state: present
+- name: Create /etc/influxdb
+  file:
+     dest: /etc/influxdb
+     state: directory
+     mode: 0755  
 
 - name: Get InfluxDB 
   unarchive:
-      src: https://dl.influxdata.com/influxdb/releases/influxdb-1.4.2_linux_amd64.tar.gz
-      dest: /
+      src: https://dl.influxdata.com/influxdb/releases/influxdb-1.4.2-static_linux_amd64.tar.gz
+      dest: /opt
       extra_opts: "--strip-components=2"
       remote_src: True
-      creates: /usr/bin/influxd
+      creates: /opt/influxd
 
-- name: Install InfluxDB  init.d
+- name: Delete /opt/influxdb.conf
+  file:
+    state: absent
+    path: /opt/influxdb.conf
+
+- name: Install InfluxDB .conf
+  copy:
+      src: influxdb.conf
+      dest: /etc/influxdb/influxdb.conf
+      mode: 0755
+
+- name: Install InfluxDB init.d
   copy:
       src: influxdb.init.d
       dest: /etc/init.d/influxdb
       mode: 0755  
 
-- name: Install InfluxDB  conf.d
+- name: Install InfluxDB conf.d
   copy:
       src: influxdb.conf.d
       dest: /etc/conf.d/influxdb
