--- a/Alpine/Telegraf/roles/alpine_telegraf/tasks/main.yml
+++ b/Alpine/Telegraf/roles/alpine_telegraf/tasks/main.yml
@@ -10,36 +10,36 @@
       - ca-certificates
       - tar
 
-- name: Get the key for glibc 
-  get_url:
-    url: https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub
-    dest: /etc/apk/keys/sgerrand.rsa.pub
-    mode: 0440
-
-- name: Get glibc 
-  get_url:
-    url: https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.25-r0/glibc-2.25-r0.apk
-    dest: /tmp/glibc-2.25-r0.apk
-    mode: 0440
-
-- name: Install packages glibc
-  apk:
-    name: /tmp/glibc-2.25-r0.apk
-    state: present
-
 - name: Create /opt
   file:
      dest: /opt
      state: directory
      mode: 0755  
 
+- name: Create /etc/telegraf
+  file:
+     dest: /etc/telegraf
+     state: directory
+     mode: 0755  
+
 - name: Get Telegraf
   unarchive:
-      src: https://dl.influxdata.com/telegraf/releases/telegraf-1.5.1_linux_amd64.tar.gz
-      dest: /
-      extra_opts: "--strip-components=2"
+      src: https://dl.influxdata.com/telegraf/releases/telegraf-1.5.1-static_linux_amd64.tar.gz
+      dest: /opt
       remote_src: True
+      extra_opts: "--strip-components=2"
       creates: /opt/telegraf
+
+- name: Delete /opt/telegraf.conf
+  file:
+    state: absent
+    path: /opt/telegraf.conf
+      
+- name: Install Telegraf .conf
+  copy:
+      src: telegraf.conf
+      dest: /etc/telegraf/telegraf.conf
+      mode: 0755
 
 - name: Install Telegraf init.d
   copy:
