--- a/Alpine/Filebeat/roles/alpine_filebeat/defaults/main.yml
+++ b/Alpine/Filebeat/roles/alpine_filebeat/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
 # defaults file for alpine_filebeat
 
-filebeat_version: 6.2.0-linux-x86_64
+filebeat_version: 6.2.2-linux-x86_64
 ship_addr: 127.0.0.1
 ship_port: 9200
+kibana_addr: 127.0.0.1
+kibana_port: 5601
+
