--- a/Alpine/Packetbeat/Provision.yml
+++ b/Alpine/Packetbeat/Provision.yml
@@ -3,6 +3,6 @@
 - hosts: dev-packetbeat-01
   become: true
   roles:
-    - { role: alpine_packetbeat, ship_addr: 10.0.0.152 }
+    - { role: alpine_packetbeat, ship_addr: 10.0.0.152, kibana_addr: 10.0.0.17 }
 
 ...
