--- a/CentOS7/LSF/Vagrantfile
+++ b/CentOS7/LSF/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure(2) do |config|
    lsfm.vm.box = "centos/7"
    lsfm.vm.hostname = "lsfmaster"
    lsfm.vm.network "private_network", ip: "10.0.0.100", netmask: "255.255.255.0", virtualbox_intnet: "lsf_network"
-   lsfm.vm.provision "shell", path: "Provision.sh"
+   lsfm.vm.provision "shell", path: "ProvisionLSFmaster.sh"
   end
 
   config.vm.define "LSF-01" do |lsf01|
