--- a/Alpine/Lmod_EasyBuild/Vagrantfile
+++ b/Alpine/Lmod_EasyBuild/Vagrantfile
@@ -13,6 +13,10 @@ Vagrant.configure("2") do |config|
     config.vm.define node[:name] do |config|
     config.vm.hostname = node[:name]
     config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net] 
+    config.vm.provider "virtualbox" do |vb|
+      vb.customize ['createhd', '--filename', '.vagrant/D01.vdi', '--variant', 'Fixed', '--size', 20 * 1024]
+      vb.customize ['storageattach', :id,  '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', '.vagrant/D01.vdi']
+    end
     config.vm.provision "ansible", playbook: "Provision.yml"
     end
  end
