--- a/Alpine/Telegraf/roles/alpine_telegraf/tasks/main.yml
+++ b/Alpine/Telegraf/roles/alpine_telegraf/tasks/main.yml
@@ -24,7 +24,7 @@
 
 - name: Get Telegraf
   unarchive:
-      src: https://dl.influxdata.com/telegraf/releases/telegraf-1.5.1-static_linux_amd64.tar.gz
+      src: https://dl.influxdata.com/telegraf/releases/telegraf-{{ telegraf_version }}-static_linux_amd64.tar.gz
       dest: /opt
       remote_src: True
       extra_opts: "--strip-components=2"
