Removed an error in conf

--- a/Alpine/Telegraf/roles/alpine_telegraf/files/telegraf.conf
+++ b/Alpine/Telegraf/roles/alpine_telegraf/files/telegraf.conf
@@ -9,8 +9,7 @@
   precision = ""
   debug = false
   quiet = false
-  logfile = ""
-  hostname = "/var/log/telegraf.log"
+  logfile = "/var/log/telegraf.log"
   omit_hostname = false
 
 [[outputs.influxdb]]
