Added a PHP7-fpm restart

--- a/Alpine/Nginx/roles/alpine_nginx/handlers/main.yml
+++ b/Alpine/Nginx/roles/alpine_nginx/handlers/main.yml
@@ -15,3 +15,8 @@
   service:
     name: php-fpm
     state: restarted
+
+- name: Restart php-fpm7
+  service:
+    name: php-fpm7
+    state: restarted
